Fix an overflow of the 'tester' bloc

--- a/ccccc.css
+++ b/ccccc.css
@@ -22,6 +22,10 @@ DIV.overlay {
     overflow: auto;
 }
 
+DIV.tester {
+    overflow: auto;
+}
+
 .error,
 .warning {
     position: absolute;
